RESOLVED FIXED197336
Storage::deleteOldVersions does not need to retain Storage
https://bugs.webkit.org/show_bug.cgi?id=197336
Summary Storage::deleteOldVersions does not need to retain Storage
Alex Christensen
Reported 2019-04-26 18:07:25 PDT
Storage::deleteOldVersions does not need to retain Storage
Attachments
Patch (1.74 KB, patch)
2019-04-26 18:08 PDT, Alex Christensen
darin: review+
Alex Christensen
Comment 1 2019-04-26 18:08:25 PDT
Alex Christensen
Comment 2 2019-04-26 18:08:28 PDT
Alex Christensen
Comment 3 2019-04-29 13:32:59 PDT
Chris Dumez
Comment 4 2019-04-29 14:09:07 PDT
Comment on attachment 368373 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=368373&action=review > Source/WebKit/ChangeLog:5 > + <rdar://problem/48679972> How does this bug explain <rdar://problem/48679972> ? What's the CompletionHandler that crashes here?
Alex Christensen
Comment 5 2019-04-29 15:28:46 PDT
Alex Christensen
Comment 6 2019-04-29 15:40:24 PDT
Hmmm, now I'm not sure. I definitely saw the destructor of this lambda being the cause of a crash but now I can't find it.
Note You need to log in before you can comment on or make changes to this bug.