Storage::deleteOldVersions does not need to retain Storage https://bugs.webkit.org/show_bug.cgi?id=197336 <rdar://problem/48679972>

Reviewed by Darin Adler.

* NetworkProcess/cache/NetworkCacheStorage.cpp:
(WebKit::NetworkCache::Storage::deleteOldVersions):
Something is wrong with the lifetime of Storage, but we only need a String, not the whole Storage.



Canonical link: https://commits.webkit.org/211578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244750 268f45cc-cd09-0410-ab3c-d52691b4dbfc